--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   margin: auto;
 }
 
-p{
+p, h3 {
   font-family: optima;
 }
 
@@ -39,6 +39,15 @@ i {
 .portrait {
   width: 150px;
   border-radius: 20%;
+}
+
+.projects {
+  width: 300px;
+  max-width: max-content;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 50px 100px;
 }
 
 .tech {
